--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:9C2mlsvc,iv:DxAXigY1/9YhAXmb9p0eNeq6wafdoLXhurUsTMLOsQQ=,tag:EESXl2SlSv9aASjXrsJm7w==,type:str]
-ansible_user: ENC[AES256_GCM,data:Z/n/PjNf,iv:cMmNdMpmw310BpjqLJiXDcwq5dnsAuDBWZXkSVPyD4I=,tag:rhajaD+Lb8ZdXy3iWIy/+A==,type:str]
+kind: ENC[AES256_GCM,data:K3YWtXpG,iv:e/R1d0G1A42v3NuzN8mF6nekt93d2H9erZTNTtSeXbY=,tag:2+NZm04gXnziIU8Fo0VAKg==,type:str]
+ansible_user: ENC[AES256_GCM,data:6RDZdf4w,iv:SWnh/Zq/94cF+bH9IQxlbjoEMw31lWG95j/eoMLYpow=,tag:3xODStAAyu8s0+jdW/26CA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvYjZiOVRtK3ZMMUdmWlJp
-            UytzQ1VCcDZ3L3ZxcWd6TmVqZFZUdnBQVUJNCk5aVGw0MGs2emc4S0hwbVpGeFRI
-            emN0MU1hYTFiZ1FxNzBjaVR0K3didjQKLS0tIE0vSGJhaHRWaHo1WGg1YnV1c0g5
-            bHpXWEFIWEovSThNdDZGOUQ2V25NUm8K4l53U+17v7EeSrfD9Pnigs+q7BZihWJr
-            D3OvAtyd7+uvIr/mWXkLLmr3WR5Rzh+4xJsJ0BUMi6o7KYTSWMlOWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1OXY0NXgvM3JWYXlPTVo3
+            K1lvV2dBbEYyTENkZndLOE04Smw2M010Um5VCnR0SHhLcmZRSUZsenZ6KzQ1R2Mv
+            SmYwNVFVZ3g2VU5XWnBnSUJBWjNZcTAKLS0tIFJ6QlhFU3AwSWIxUlRjV0pQUHV3
+            N21TZU9Zd2F4Ykt2enQxcWhqT05acUkKkZ1xtOTWCsj0TEKzbC3i4mEexqqqcHhX
+            SDDXvDMOg+uS/Td/zYWR86LjeYPZ/+Skv7OpK/4Yo1I5StRjXA2Xbw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T23:11:50Z"
-    mac: ENC[AES256_GCM,data:Ls3ZEvkXbjH53NqGLbgmOGj3t3M/0/nF3h5UA0doC51t0Xi5bVyJ2YQUBZ23mm10ClCRboX2XR5bJUW9xiA5M+0I9RuCOTQP4zWPM9AYmSl8+TTw77GVyJsFx8tJKiGCwARQ0LTI9IGa2wNNBW64BHQIeUVlQgmxamV+q+lW650=,iv:VktosNuY3jnlaS8wi9HJkYn4qeY03YJE3Kt/7Zw2iS8=,tag:kw9FrM6vDNyfrX28MsZUsg==,type:str]
+    lastmodified: "2022-12-25T00:12:43Z"
+    mac: ENC[AES256_GCM,data:lS4PmkUPCGpOkG3rJCR9+8ZWT37RhaHHn//kWpAaULY8oKinTM6gPSpgNj7Ts0Ki7nA3h+dfu/LSLionxQ+8w1W6D4vuPUNIQIs1fVimjN1kyqb3pTGiYsnAruEuqsVqzZ8pYFCCRD5oPOVQ/Vo4O0foxL7YvXhniBo2xnAiFEk=,iv:oo4sMeOkVTMcAshz7c7pDMH+3zIb+R48FIQ9bq+iQYs=,tag:l7JDhbWCfTZTIbvU6wAmXA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
