--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7WXL7+O3,iv:y4iaZxu+dbzSepADeeclDZ/lXvzuflg2L6yoG3SCWkg=,tag:XleU8p7kWn3ZujBxfs9jZA==,type:str]
-ansible_user: ENC[AES256_GCM,data:TXLFtGti,iv:56hRCvyGa4jyWAYoSNAYIogzcEBfI3tp4SUTe8Q27Mo=,tag:tsiwrEW+rLh+dBT17etV4Q==,type:str]
+kind: ENC[AES256_GCM,data:jK2qalNk,iv:qW4P1BCa5skjiigDzmLYN6EBEKmoZ7wr+21AC/L+HrE=,tag:fXQLezKkGMYQclCjBMAMMQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Y30qxuMS,iv:3NxYSalvUvtriOJPuAZVb0W+WMcIbJQZ/+Z0FshZ8ZI=,tag:VCVF5VN+tCGlyPt8UqKgAQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkRElIRkZIL1lhQThvNUZa
-            aVhBbmdWeUxyd3hYc0tkblVtSzV6ZnM0WUdBCjErOE1JVmppNno4TjQwUURqNDMz
-            MzdVUUhQRk54NGRWRUcxaUJoSGVpT1kKLS0tIHh1anFiWWo1Q1lmdTNIUW5RdVov
-            ckZ3MTdSanh3K202U2QxUVVrVjdONDgKzun+UkMYMaQb9EsQnT1PIjXGvqJAvVNV
-            MAWWyeB6qQMKpy6pUNOqnY9K7pEYC/T7PwqOYX41pAsqnbLwiGmAfA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjTFBoaEU5ZlQyN0xDMmpO
+            Q1VtZTBDemVnYkhCMU4yOHNRR250WXFxczFJCndFQWdQcXZ4eGJiQ3VlL2JtRFQ4
+            WC83bUJnaE1PbFFJaWUyNnEyL0gzeVkKLS0tIDBTanVTWnFEOEJsK1BFVzFVWXh3
+            emFhSXA2WFROUW55V2RzQVFyN3N1OVUKLqs5xOeLsila489+sDn13F/M5CyUJysT
+            2Ch0oS4RFr+I0ipu8/aOC0zRne2mSaC39Qlp0DHEvBjP32sb5rUrVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T23:11:50Z"
-    mac: ENC[AES256_GCM,data:bHvRwuHnMNpvHZWKBonTOeUmVfb5DlDHmLTXPw8zYbtp65SN6AIV1goKAzE+NuFwQWeFXRPcqFvOY4+lhPeWyoMyN+CgK0JIOsrNYcnmEXt36gQtPWmp88bc/Wpu5GTzQDJzGT4JR88aUiHnIq6kgyHnaA4EFvEUohnkGIvfvxk=,iv:j1g+wXFCojs0JJhGd0i3j3mjCKhsXFWA8RS6yyQW1H0=,tag:wnNwhu8xSE/B///yRrEqQg==,type:str]
+    lastmodified: "2022-12-25T00:12:43Z"
+    mac: ENC[AES256_GCM,data:1+RDM6qfPzPKjWbwEtec2XUWPCh1LlC1jg08EOUyZaoCVg/DL403Zhx3fhvK0eY8MzP3t+xt+4nEyhzirsDv82kzv8VRAdWXz29wfHCNx6xmpf0fHOU0EOURjz/z++zk0c696+6yuM6N9f+z4mf1DPDOUW4Vpy5sqBgsWKUqWEo=,iv:L6W5ZurU26alWSrB9Vvy5MPcrWZ8+lb9U591CCITBas=,tag:/+aYPr1GPyAXY0d2i9VHEw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
