--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:9AnR+8RR,iv:m4IpHZ5WMmbBFqYdNDwtb+ISNY/E0L9X22p7+LssbmQ=,tag:eX5XUjRlW1KYElshHHf/wg==,type:str]
-ansible_user: ENC[AES256_GCM,data:b+6Vg5ms,iv:vgwb5QJNErW72hYkuX8q+Ti65iW30VbOvKi7ELuEbFQ=,tag:vaXWeur0/mzMZsUkPXvimg==,type:str]
+kind: ENC[AES256_GCM,data:ASTZHz6/,iv:u8Eq7fBpIkFI2MAUDRWauGxvbdkkcBGbc9q9a37StIU=,tag:a+lQbxNymCtyTIMLcdhfKw==,type:str]
+ansible_user: ENC[AES256_GCM,data:G+boexKe,iv:lqUhe1mxWK/WBO+LW0EQXSdzsn5hVxTyznM8XfL+NYI=,tag:fO5Xo8DubWoqFLOJRukPpg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPa2xNM1BxSDBYYlRmVW1z
-            MXJ2SnNkNCtXU3RKZGxQeTJTVko4YTZ4OHowCmJGKzkvTC83dDZjSkJIUURldWVt
-            bUI5TUVmS3Nybk1pbTZvSjlCZ2xJZ00KLS0tIGxtbFFDOXN6emRrQndwVC9ONG1T
-            L2VRR1UxaGVpTnFDazBCb29Mbnd6enMKAM0Uamp+g1TdSS1xHHih4kaEBkss2xi+
-            26cS+eN+DkBNo7qghdslNf89czDHr8WI674pTuA8f/GoBYOPuFX+Iw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4RDkxMUc2aUFtc3FDbWU4
+            V0xDN2QwRmdWaGE2WnVweG9zcUJ2WmxGbURvCkRnc2xnVExhWVNMYVhIMTE2cjJv
+            YThEQzVUN1cwbzg2OTEzSmRobU9VSUkKLS0tIHM3UG5KaCt5ZW5tRGNKUUt6MkJq
+            bGM5OExPMnFobnlFU0NRNWlFdnBTa0UKsrNqlyfcZUNmhUod5c3FLYp95PfAfUB5
+            getG9dvS7CkPvAYW48u9KmFYeyjsr8VsIO0GUN8n9eUfF0X4FTRVAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T23:11:50Z"
-    mac: ENC[AES256_GCM,data:vLjGYqEk08wLUlHwhttovKg8iz7x7gwbruKIs71RsAHedyy4DvJQMvKeIsEczL3TusSB/+LEXfAf8b4hHcOHR1oo4Fd3avWzOpIhL0iDOp3BFL4HBO4zsUZWQG/X42zi4M8LjRRbi3EWIX54JeZINc+OyqNNt0YGGGEqE/6PXSA=,iv:/zBvDhj61VkiKIZH4fXiQXzGb0O2TSsu4N2SVqvcw5g=,tag:DYdaryYv8BRupbZYJUmiqQ==,type:str]
+    lastmodified: "2022-12-25T00:12:43Z"
+    mac: ENC[AES256_GCM,data:cZM+CGe7/OO9JelZQwkbobbAsFn/RU/pgrBUyicXV+/Kj4G0ybvSliYyF9JCm/X/IFOPI1IY2N9MTR8wPRsRp/FbCndpLVUHUCMrpRonFfF1yz1wtN4TDPBFwm+ekL2tY1BV6YaJHuyBeAbsbx1I2iSOQZ39adIJ+OAeovoDuO4=,iv:4ki4HYerAu5j3z11OPKhNw4uobZCAm6lnGwM6uX7YFw=,tag:b05v2q7sfK0XXkjBdxlBEg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
