--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:N4/By7PE,iv:AHoszXAj79OyqZG9bkm7wb0k4K0Q3oCpWCs/2zo1bjE=,tag:25OGZdXzoOswNSbSChGOlw==,type:str]
-ansible_user: ENC[AES256_GCM,data:ZiL8TGDQ,iv:4dLzfmLbe5vypMXv63kfUd+vOnm5EuL2U6mYCMRkz2w=,tag:Wi6fgqsXdcgqhFJz/mvDug==,type:str]
+kind: ENC[AES256_GCM,data:KMw4LHxj,iv:IqqwM0PPNAVsC0fum91+n7u0jSxN/fp3tzVyCX0s4M8=,tag:0xx3qKqiBLjJ6HODjEEhSw==,type:str]
+ansible_user: ENC[AES256_GCM,data:eecirhsJ,iv:0AnqspFSWK/9i1JkHzI4zQkYQLuEqR7GinDXUbp/wsQ=,tag:XzvuGiIWMuh/7Ojmdsq1HA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxbVZ6T1N5K0tuK1g4MDI0
-            RlYzZjUrbmtEM2QvSkFrYWdyMjdSMEFKeENnCkV6RUVYVW9xYlJDQ0dIRFBnYkE2
-            UURHaVNubk44VTZFNnhnN3lPbU1YVVkKLS0tIDhIOFcrMjVWTzhvejhqMVhkWmwv
-            NmRjR3dFVXgvTlMzclhmaHNrM0MzaEEKBpCnTz2plWqOOzHEpXhY4Xu8MRaCiAHH
-            k5bqLCsvYXzxvUmxq8M+ySFRDkSs/rPQh5vvL23l2shGM1V3idgxpw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsZlQxVTFwL3ZQckVqdnBr
+            aThOWG9mcHZ5RUtWMkZnaEplSTB6QnRrTDFnCldYY1pMMWpHTkxpQ2dXN3Q2T1RJ
+            MERrSVoxVE93VnQ1S050eVRCYmQ5NTAKLS0tIDZOenJ2eDlpQ3E0UFBRUU1FcnVk
+            MlN6d0NxRDVUQ25nRTQ2U1QxNDZUSUEK06IxFG4lTvJ+qphkiZyMWVRBalozb0a/
+            MdD0csJt/kFW7xh+oliqVSc/si+MeIACvZ8UAfz44mH2OJkgngJgvw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T23:11:50Z"
-    mac: ENC[AES256_GCM,data:OIqXKlqcmDkuq7X0V5V3IJcw64C+7UeIbmu/IhD4QvQ62/ZIIySDVmCnSG1T9zOcT/PKlcvoImBi/dm9dSiAm7/nSToOQVQbZBPDbS/jPehguX+R0pAOvH8mmM/ynuMHSBMvhRXFMu8p3o9cRhFd0oIiCGbgVn1RlGJcni2jTVk=,iv:XZJ3UWocsJhvQKoqbqDqRgg7WhBefJcL7fzk5okmWO4=,tag:WBcFA+kD1Uj+NWEMp7SDPA==,type:str]
+    lastmodified: "2022-12-25T00:12:43Z"
+    mac: ENC[AES256_GCM,data:J8B9QKWbucE6LYrlbf7EYEJcEzR4rZfemF6tZLj7QirgvqJAcmCXrsqtryoiYB3IbozD9p/qyOdsuM29L7lDX2/p6PY793T4nhLv9bSiUZBk5u+dcD8uIsraUjQnPlaJOC1vaBmxqlM4En+dEVDiHGZqv8BKPyvSLBCSCtjiWdI=,iv:5CCxRpYnu5KFdClYn65DwXMsdMqlO2JNAjCmIukELZY=,tag:h7Bs45iNY7esQB8MbKemGw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
