--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   ref:
     branch: main
-  url: "ssh://git@github.com/feldblyum/cluster.git"
+  url: "ssh://git@github.com/feldblyum/cluster-test.git"
   ignore: |
     # exclude all
     /*
