--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:92O6OrA77fZ7XAA=,iv:gRe6CPQwVLq1ahd655tkSdodiqjIF62il80CwpsGCII=,tag:ZMyOG79mURsheS649u1poA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:zGQKwwIe7pf3if1Jsv+hPN6G357/,iv:oHCd2ISy68ME6MQfDngeD7XMDhgGbpM48uEcXU2MzBQ=,tag:/2cMzTc/PqaXbPw3VLsx2w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:vcy1Czwb3S0rd6c=,iv:7hfuOq1UaPaI4CR1rf21+UoKgagLGm9eqXKztCkXSvk=,tag:1hfYcV78Nxj34WxtkqIAtg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:KRXpsx2LJOmy/qvzkd9D3Nt/KAIE,iv:ixOzocwX2Cgddv3ryqdPZfafuIzCEa9/yEbP4cXEigg=,tag:0al8iP/3zTAlSGFHHndAmw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRZStoa09qVUNuVEpOdjha
-            M2FTajNsMEJvUDk1NWdXcVFDUGI3VWJDOWh3CmVLZ1pBS1dvYXQ0bzE2c1BnUWhv
-            ZldERGhqeEZRbTFzb2llYXNTTjl1VncKLS0tIG5PakJCVW5wc1VhN0FpQTBtN1pF
-            M2dUcmVMSUhsT2p3eW16Y1VrWVBUc2cKjrEfQmt5fFewAfusNYrSwVGhUxWdJ30I
-            yQHSaCu7P2fL/GYPNS7OQGg9hCeLN6onPmUg0M4u3zERMPDQ1nzouA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWbFl4S2Zlb09HUEZhYklH
+            R0FsemFmUmc4Z2NjOG9JbVJsNUhueWdDWURJCitVaWk3bmJ4RDZnSnhJYlMwRktH
+            MzRtZVlrWmpKU2Vwdnc3b0NPUUVqSUEKLS0tIDFraVhvMUk5VHlwRllPT0dmcmJO
+            ZjN4Tnc1YTM1ZFNMK3ZSTlhQcSs5QWsKzpLy/ac/otESOnT9GQ0oB5dKCPJO62L/
+            3jxYygCyCwTS6nC4DHFCxbLKZS2NzIA8oOdovsg2j9jELPZVP69RaA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T23:11:50Z"
-    mac: ENC[AES256_GCM,data:x21Oa5pvUSyofbyWeBVSKRYv1CC+Uq4HLDWcp9eTCxVSUi9yZMpOFbI1f3X+FBJ7IYNgsLYdNay1Lx23Z5PLOGiyLrdXD7GixwE5fOv9/qbPuee3oO+cv/EPIyNXwK+7XyjRrmVpSE9xYlcSp26UM8bOg0+qzXaXp5LSkXj0TtE=,iv:Oshjss4k8htMvqgkXdeAGZNCbL+ocEiXGgz1LlykuXM=,tag:KfBRs2oxaTrL3xPi/L6KqA==,type:str]
+    lastmodified: "2022-12-25T00:12:42Z"
+    mac: ENC[AES256_GCM,data:AjnLWF3J5GnMbniLw3njl2Z57AFD5+eE2e473ijUECo1Hjvij30vO8Y8VWNphlYePDQ9q7Ac9IyNn+gpmGCjmNl2U8Q3mZ9wmzQ5IVJlIq8LxY7+1vVrVU9dkoIaqVHjiME/gIOGpgYdoHQvfYH4cwoGGIVbI9Rl0nIa+Une3bk=,iv:xC0dvt3WXifFX3Ai0rwwBhLLf4Xxzy2yBjVlyojK8WE=,tag:h6N2WceYkbpJjSfU2+7seQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
