--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:K3YWtXpG,iv:e/R1d0G1A42v3NuzN8mF6nekt93d2H9erZTNTtSeXbY=,tag:2+NZm04gXnziIU8Fo0VAKg==,type:str]
-ansible_user: ENC[AES256_GCM,data:6RDZdf4w,iv:SWnh/Zq/94cF+bH9IQxlbjoEMw31lWG95j/eoMLYpow=,tag:3xODStAAyu8s0+jdW/26CA==,type:str]
+kind: ENC[AES256_GCM,data:Vuu/npHA,iv:fm9rGsx3AmWvUCtgIrNzkK6pHA0u1gLikWs8v6S9CZA=,tag:LVj2oc6zI4l+BARrcaRd7A==,type:str]
+ansible_user: ENC[AES256_GCM,data:3Ho7PDlp,iv:ZA9Ff4/r/WLedzVgXkqLdE7R/Cn8RWdrseQSgCoKGAc=,tag:JBwAFVAokd21HH8Ef/0zag==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1OXY0NXgvM3JWYXlPTVo3
-            K1lvV2dBbEYyTENkZndLOE04Smw2M010Um5VCnR0SHhLcmZRSUZsenZ6KzQ1R2Mv
-            SmYwNVFVZ3g2VU5XWnBnSUJBWjNZcTAKLS0tIFJ6QlhFU3AwSWIxUlRjV0pQUHV3
-            N21TZU9Zd2F4Ykt2enQxcWhqT05acUkKkZ1xtOTWCsj0TEKzbC3i4mEexqqqcHhX
-            SDDXvDMOg+uS/Td/zYWR86LjeYPZ/+Skv7OpK/4Yo1I5StRjXA2Xbw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOOHdMWFRNNEdDRTd5U1kv
+            MmdJckxLcENIa2krazZQTmdJTHlJdW1uV0FVCnM4d0c3RUJVNlpCT1QxSkpSL29k
+            aEZjemRTL0xVMzdIa2Q2SFIzdTZVNEUKLS0tIG43T1YzN1cwQWZmOWZwK3RTbkZB
+            M3hFZE5pQ21CRnJpMlVoWlBTT3Y3b1UKjW4yjYl5Zv6S2Up0Wbv9D6rZsG/n9w7F
+            f8vsuiBFDYnZ994DfBngTvqmBH7cw3Q1pnwRATUqVy9NoLE4rvohFg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:43Z"
-    mac: ENC[AES256_GCM,data:lS4PmkUPCGpOkG3rJCR9+8ZWT37RhaHHn//kWpAaULY8oKinTM6gPSpgNj7Ts0Ki7nA3h+dfu/LSLionxQ+8w1W6D4vuPUNIQIs1fVimjN1kyqb3pTGiYsnAruEuqsVqzZ8pYFCCRD5oPOVQ/Vo4O0foxL7YvXhniBo2xnAiFEk=,iv:oo4sMeOkVTMcAshz7c7pDMH+3zIb+R48FIQ9bq+iQYs=,tag:l7JDhbWCfTZTIbvU6wAmXA==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:lh/6h2N+Yn+nNPLjv+AeYIOQxVCvSmEYbPpGnwZUm/aM0rFX+nf17uAjgC007aIzdGhhlOHNy3Xr9GVNKme6DPR/QbLiIq1tN4JOsKfXN2hHTBZBSOFNa2TVZSosJDpgS8gq7p12TYnbNXsYUqTkPPqtKJDDEMX2RtJ0QmLOWi8=,iv:svt1/XGrQdOdkRLJCnI/ZmyAoI1dgvR2FhBRUDKytHo=,tag:E6cMNe2w5XMW1PnvM6MayQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
