--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:jK2qalNk,iv:qW4P1BCa5skjiigDzmLYN6EBEKmoZ7wr+21AC/L+HrE=,tag:fXQLezKkGMYQclCjBMAMMQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:Y30qxuMS,iv:3NxYSalvUvtriOJPuAZVb0W+WMcIbJQZ/+Z0FshZ8ZI=,tag:VCVF5VN+tCGlyPt8UqKgAQ==,type:str]
+kind: ENC[AES256_GCM,data:iesSOQ19,iv:zSrc9CE7vBp3gNwhBJQDcMc5tCj+5uKzKdijhZ9oyHo=,tag:Sfvipbqo6fEVw9OZpNT+bQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:M49fuNb6,iv:j6gQ3sXn/vzh7nptvf5dnFSroWxwQeUu3dUk3osf9B0=,tag:egN14OlxfrJu5wJW2ATpTw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjTFBoaEU5ZlQyN0xDMmpO
-            Q1VtZTBDemVnYkhCMU4yOHNRR250WXFxczFJCndFQWdQcXZ4eGJiQ3VlL2JtRFQ4
-            WC83bUJnaE1PbFFJaWUyNnEyL0gzeVkKLS0tIDBTanVTWnFEOEJsK1BFVzFVWXh3
-            emFhSXA2WFROUW55V2RzQVFyN3N1OVUKLqs5xOeLsila489+sDn13F/M5CyUJysT
-            2Ch0oS4RFr+I0ipu8/aOC0zRne2mSaC39Qlp0DHEvBjP32sb5rUrVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRSk9wd3RtNUtlaDNBUDJz
+            K1pPQlZZeEFnczhSRGM1S2VRVHh0cHN5TTNjCkQ5cFB2N2RpdVlBSytZLytJRzVn
+            elJKOGJUbVB2aGQ0elljQUJIeGszMWMKLS0tIFA0bGJIbytIYXl4TWJLLzdvSk9P
+            U3JLMFlnTXNtTHV0cHpPRjFlMDErUmMKVguPRnHicWxLS+4K1oyFkm01oT0vkqLU
+            Plu4jokTqyCUeo6WZ4NcXZm1vyUyA79QYdIEnhqLQksGpJM3iKQQdA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:43Z"
-    mac: ENC[AES256_GCM,data:1+RDM6qfPzPKjWbwEtec2XUWPCh1LlC1jg08EOUyZaoCVg/DL403Zhx3fhvK0eY8MzP3t+xt+4nEyhzirsDv82kzv8VRAdWXz29wfHCNx6xmpf0fHOU0EOURjz/z++zk0c696+6yuM6N9f+z4mf1DPDOUW4Vpy5sqBgsWKUqWEo=,iv:L6W5ZurU26alWSrB9Vvy5MPcrWZ8+lb9U591CCITBas=,tag:/+aYPr1GPyAXY0d2i9VHEw==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:lD34j3CuFnJM6wQgdYsxhhOtTAowIjzUP7+gRrYHtYJv1CZ8Rx8GpeX28FCqj+ddh4GWBztg4T/OIqQ4ds2QFqOR2SYZXcoH4hDsbfCHEJd8sXsDwyHIDZ3FgFQt2moODSLbiZMkN6Srli+b5/HAD2JFoGdFaPrtwB6vYi48H9o=,iv:kxq8zmXclgF5gQwwjZe/rQnDj6UY5lydQoE0nDiH4DA=,tag:mK7VKLsiPzZQlihcrE4e/Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
