--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ABWUjvaN,iv:lm/eGE4kM8HYPcwrpsARFwgcK3KSLPNDF+7ZajDNMbQ=,tag:6M9x6eXFQOWT4tqzgT0mXw==,type:str]
-ansible_user: ENC[AES256_GCM,data:EubC3xnB,iv:JFqzLmj71l68BYI+gjX1oDvqM07XD44hsc0J41oN0tc=,tag:1SWQ+1wwbZ/lMPYMZwE+FQ==,type:str]
+kind: ENC[AES256_GCM,data:mnHwWm7O,iv:vmQ0rRMDQwoBeR5Tm0CRjd9sK63Y+9Gf2f0HmY44ZiQ=,tag:DrZPocTU+N1WGqD2Ps22Aw==,type:str]
+ansible_user: ENC[AES256_GCM,data:SvNaV+cg,iv:iCmkhbB6rciSWyTwVl0QKpPb+ZNXlTqHML2TojWUoxY=,tag:KR3FdNoj+CqwF6xVDcH5QQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIbnl4bFhSeHJtOUhWS2NU
-            QTkrdVNvVnFBL3d2STRRZkUyMDdadCtteHljClhaS1RYTlc2Zmo5SUlTZnZ5SGUv
-            OUIwcmZMTGFKTmkxall2RUtXdnJ3bTQKLS0tIFJQcjRvNWtYSm1rU1NuZS9Zbi93
-            Ky80UjNmY2VpMWI2WkNXTXRzYlhpUmMKRnD/eb5OTvAsOa1hBkT4f5onb6Abu7uO
-            WAyehe4GMN+wdF5Zzfo5lfWr/ClyJr5qHfw23cDe84vG8OTJ2hUyRw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvT0h6cWJkRHk1ODVIZTJp
+            aW45TlpxVlVDSzZiYVMzSktYMW5UR3gyTzJnCnZ0YS82MVh6NGhPR2RxZm54ZGlJ
+            R0YvK0tnZW40b3ZRQk5NSEQxQ0VjYmcKLS0tIFFHWlFqaDdrSHhwOXZlaEh6MkxG
+            RVZoZHB0N0hjbnIxOGRXYWc4OG8ydlUKvi0lYufOkxJM1B9I1/zV38+/rmhKhnDC
+            DOfrzHm9bcP7CdnimF9S3gw+cSVl9iF66mVkRCtTq2Mq4ULqaqxxGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:43Z"
-    mac: ENC[AES256_GCM,data:1uI1or/5n1+Kc0pobIfLxpRg6Vm26XuLhQunic9rfCl0cgkUU1rdTpcMjMFKZah1yiMy+EqBk1yMA20Wq6g956rhMfNEr4xJiREEXitohMlfvPN3hZO1gXTYbuT94JaPFajtBZrhYeozY9UGgKxfBGPu11n+fViEHIppsvf9s0Y=,iv:qzPZ01DdgnYvUqczgKMHdSTfirBW3+Jl6FV6OAFOMGM=,tag:VcX0C3P+10aMBE1RbknEBw==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:b76JfZI0SR1Fv/CiQ7U5qdsc2b1fGL5LZI9fUqhhYWCGR047LeHz9pNTpG0S1ejRltKjdO0zU2E6SrBvvODIDJgwSupvHJXaBJiPGf6wwTaHVBAWaA7eVD9DqYiP0A1PKO97ys87LGywiKN/vgGe90DIVw6BCSD0G+kgOVj4jFE=,iv:WGRGnSl0ZsXaNAI7XXM1pXXhvP+AAJUkWWf6oV9pD90=,tag:tjXlF2iqqXFme+zyxSV44A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
