--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ASTZHz6/,iv:u8Eq7fBpIkFI2MAUDRWauGxvbdkkcBGbc9q9a37StIU=,tag:a+lQbxNymCtyTIMLcdhfKw==,type:str]
-ansible_user: ENC[AES256_GCM,data:G+boexKe,iv:lqUhe1mxWK/WBO+LW0EQXSdzsn5hVxTyznM8XfL+NYI=,tag:fO5Xo8DubWoqFLOJRukPpg==,type:str]
+kind: ENC[AES256_GCM,data:kK7aQBxP,iv:PJFoOyi0jeGJOPP5/totDaAr1vxWvVKxwQZd99jDfdo=,tag:JpJquNaMf4sqdnv9/mj8iA==,type:str]
+ansible_user: ENC[AES256_GCM,data:yrX/bsiI,iv:siXDsWXDAfrntoMOc2pwAwP1lPVrsqXx/1MR2rl3Qhs=,tag:8q9lx937GNTvBdhxtg91Mg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4RDkxMUc2aUFtc3FDbWU4
-            V0xDN2QwRmdWaGE2WnVweG9zcUJ2WmxGbURvCkRnc2xnVExhWVNMYVhIMTE2cjJv
-            YThEQzVUN1cwbzg2OTEzSmRobU9VSUkKLS0tIHM3UG5KaCt5ZW5tRGNKUUt6MkJq
-            bGM5OExPMnFobnlFU0NRNWlFdnBTa0UKsrNqlyfcZUNmhUod5c3FLYp95PfAfUB5
-            getG9dvS7CkPvAYW48u9KmFYeyjsr8VsIO0GUN8n9eUfF0X4FTRVAg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZU0hSdjBQMDN2cTJpQURS
+            RTdvcmp0QjJLaG1aeXNURjl4Wi9mTk9DZkMwClhwS3I4akZoWHdzcmF5YmYwK0Rq
+            YXh1NGo3SEdOVDBkYUxSMDEwcjZQa1kKLS0tIFc5M1FVaURpRmVkL3ZyaE03RmQr
+            dFhFMUQrT1VjWFprdnBtU1VtaHYyQUkKQZcsBbCPv3YUzf4gqeQbfXijg0lq53k2
+            Ejcqr+OBgS7XzsJhlzTpdbSWA7wHdUpKAULOJbUrchQ5ipXTbrhk/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:43Z"
-    mac: ENC[AES256_GCM,data:cZM+CGe7/OO9JelZQwkbobbAsFn/RU/pgrBUyicXV+/Kj4G0ybvSliYyF9JCm/X/IFOPI1IY2N9MTR8wPRsRp/FbCndpLVUHUCMrpRonFfF1yz1wtN4TDPBFwm+ekL2tY1BV6YaJHuyBeAbsbx1I2iSOQZ39adIJ+OAeovoDuO4=,iv:4ki4HYerAu5j3z11OPKhNw4uobZCAm6lnGwM6uX7YFw=,tag:b05v2q7sfK0XXkjBdxlBEg==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:aV+Bn6v5VD+kjG6GZ808cjpwzDv7ozE9rEaAjgyDYw5YjSYQcAV2HcspJpClrbGUvVJO36gMYJEuQsKCKFpLKGRt4+bbme0oEAo79WYMAEcfRWDnVeBSiOg0bUxGzboo1OoxQefv7gQESviS6kAL7lBKK1jOEzkwdld5b0uqkyY=,iv:2k7ZlU7NFflFxl/1yRYXkUs9YCYjxv2dPTZGG0uNBdI=,tag:81ZORXcv2beUJ/ACLDYRiw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
