--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:KMw4LHxj,iv:IqqwM0PPNAVsC0fum91+n7u0jSxN/fp3tzVyCX0s4M8=,tag:0xx3qKqiBLjJ6HODjEEhSw==,type:str]
-ansible_user: ENC[AES256_GCM,data:eecirhsJ,iv:0AnqspFSWK/9i1JkHzI4zQkYQLuEqR7GinDXUbp/wsQ=,tag:XzvuGiIWMuh/7Ojmdsq1HA==,type:str]
+kind: ENC[AES256_GCM,data:02WueDgN,iv:itj8Pulu4Tp6Wf/ceYEjYrfTXjdEyVR0TvcnOE/0ZPM=,tag:p4kaNenq/0mF45A6dwKRbQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:pUfOmRM8,iv:bMK1Txowx614uwHhN89PUX7hmzlgltgwd+miQDhHtKE=,tag:fBlhXv8w77LS/FemoHeCIQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsZlQxVTFwL3ZQckVqdnBr
-            aThOWG9mcHZ5RUtWMkZnaEplSTB6QnRrTDFnCldYY1pMMWpHTkxpQ2dXN3Q2T1RJ
-            MERrSVoxVE93VnQ1S050eVRCYmQ5NTAKLS0tIDZOenJ2eDlpQ3E0UFBRUU1FcnVk
-            MlN6d0NxRDVUQ25nRTQ2U1QxNDZUSUEK06IxFG4lTvJ+qphkiZyMWVRBalozb0a/
-            MdD0csJt/kFW7xh+oliqVSc/si+MeIACvZ8UAfz44mH2OJkgngJgvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNYVBMbEU4QUZwZVZhdnNT
+            bnRXUUNQdmdLeDVmTTJ3RFg1NVc4TVdETlRnCjkrdDZqNzc0TlJMNHl1Nys2RnRO
+            bkFoUWZKNXcweExWRy8rWnFUR3RLaEkKLS0tIFZlZlVsM3dJYmcrcG1yYUY3SFRm
+            MEg1cDUrbmh2L3M3RmpqQUNNR2tRcVUKknmN06hxpCRRavxHzOjbktbKeB91DGh6
+            VT4KwHWHyfB4PlUECSEvTeyooJE2I4uoelEpj9z7ed5DSoOQD+TOJg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:43Z"
-    mac: ENC[AES256_GCM,data:J8B9QKWbucE6LYrlbf7EYEJcEzR4rZfemF6tZLj7QirgvqJAcmCXrsqtryoiYB3IbozD9p/qyOdsuM29L7lDX2/p6PY793T4nhLv9bSiUZBk5u+dcD8uIsraUjQnPlaJOC1vaBmxqlM4En+dEVDiHGZqv8BKPyvSLBCSCtjiWdI=,iv:5CCxRpYnu5KFdClYn65DwXMsdMqlO2JNAjCmIukELZY=,tag:h7Bs45iNY7esQB8MbKemGw==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:tn4qQue26dy0n2oWhwUnMImHjEbVgsKstL2TiGPTtkzgsUyU+tf9jhOl/o+KmRUhWdn4eYPKRVd6Rj6J49YkGFjDlNytf/HRZkY48BO50DW/vxANBGt4A3NLWRMufC6+VNcsO9ep48NpfbpJVeIMLM94Y5MYqs5TMjeXh7TOU+c=,iv:Hr5ftl5ubaxSCe5FB19XSu1DWfG430UCoS1ww42JOUQ=,tag:qALp/tb30FBNxh2pVpKiMQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
