--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:vcy1Czwb3S0rd6c=,iv:7hfuOq1UaPaI4CR1rf21+UoKgagLGm9eqXKztCkXSvk=,tag:1hfYcV78Nxj34WxtkqIAtg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:KRXpsx2LJOmy/qvzkd9D3Nt/KAIE,iv:ixOzocwX2Cgddv3ryqdPZfafuIzCEa9/yEbP4cXEigg=,tag:0al8iP/3zTAlSGFHHndAmw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:dmuOvr+Tkk45KdE=,iv:Evn02rM9wkFOLb69q/Zicn0VoY/ifd8HvRFeXLZntk4=,tag:4i8q2F3Eh9o9kIr6O7FzHQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:BX9roIFNkWN5n6ILf2JJlwypKKYI,iv:nzxW5IePD/Q2NuWo4T5joCnOiip06KvCHPTcTePJ3Eo=,tag:tTL9tkjL49RYimwT1HxKhQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWbFl4S2Zlb09HUEZhYklH
-            R0FsemFmUmc4Z2NjOG9JbVJsNUhueWdDWURJCitVaWk3bmJ4RDZnSnhJYlMwRktH
-            MzRtZVlrWmpKU2Vwdnc3b0NPUUVqSUEKLS0tIDFraVhvMUk5VHlwRllPT0dmcmJO
-            ZjN4Tnc1YTM1ZFNMK3ZSTlhQcSs5QWsKzpLy/ac/otESOnT9GQ0oB5dKCPJO62L/
-            3jxYygCyCwTS6nC4DHFCxbLKZS2NzIA8oOdovsg2j9jELPZVP69RaA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIK2ZDSHY0b1BFTVNzV1Ji
+            Yi9mNkdWL084ZkZ4N1A4VFBoa3AxYU9TV3djCktycWhzL044ay9wQTUwS1JnRDNk
+            cFlOLzB1QWN4YmlLV3hNaUFSUHIxSTgKLS0tIEwwZDZyaHlYMFFpeGs5NlVJNmpS
+            aU9QVFVONWhnd0c2by9NekgrdGYxN1UKCOYoGYTXYIeRanBFYt0KJvTfgbYE5bsR
+            hwqoLf77USD7pF72ptxh72SZ1QCedEAlgy7PzPqYGBkTXowAgAC0Hg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T00:12:42Z"
-    mac: ENC[AES256_GCM,data:AjnLWF3J5GnMbniLw3njl2Z57AFD5+eE2e473ijUECo1Hjvij30vO8Y8VWNphlYePDQ9q7Ac9IyNn+gpmGCjmNl2U8Q3mZ9wmzQ5IVJlIq8LxY7+1vVrVU9dkoIaqVHjiME/gIOGpgYdoHQvfYH4cwoGGIVbI9Rl0nIa+Une3bk=,iv:xC0dvt3WXifFX3Ai0rwwBhLLf4Xxzy2yBjVlyojK8WE=,tag:h6N2WceYkbpJjSfU2+7seQ==,type:str]
+    lastmodified: "2022-12-25T03:45:15Z"
+    mac: ENC[AES256_GCM,data:jYhj7tJ1Lu296Bs7dC2WyprJnNpKx+h8LzT3H7DZOAMS+0fWHLA3sSUoKEV03fIdt/wTtS949tg39xDnLq16+6D/Y6X/+Ru2jwyuHRgQvFDnjHSVv948eHelv1cZ+SlFPOTAeIS0Z6Ndk12djYyAtmzMYdbdwClppZxuBnnx6Fw=,iv:9IOpqFZop5jNP/T+Ms8sBfGLLR7BYUZtPz/fPc7J70Y=,tag:j6QiddUp/Frey80CiCLqxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
