--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -8,6 +8,8 @@ spec:
   interval: 30m
   ref:
     branch: main
+  secretRef:
+    name: github-deploy-key
   url: "ssh://git@github.com/feldblyum/cluster-test.git"
   ignore: |
     # exclude all
