--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Vuu/npHA,iv:fm9rGsx3AmWvUCtgIrNzkK6pHA0u1gLikWs8v6S9CZA=,tag:LVj2oc6zI4l+BARrcaRd7A==,type:str]
-ansible_user: ENC[AES256_GCM,data:3Ho7PDlp,iv:ZA9Ff4/r/WLedzVgXkqLdE7R/Cn8RWdrseQSgCoKGAc=,tag:JBwAFVAokd21HH8Ef/0zag==,type:str]
+kind: ENC[AES256_GCM,data:R+AURfPC,iv:8SWiXOiT1Vb63FyC+4zroB3MUqbuuXfZ+7AWW3nW3Y8=,tag:+srvaH7r4kOOPlnvp3Kj5A==,type:str]
+ansible_user: ENC[AES256_GCM,data:mhwa3BMi,iv:H7uboG/I2dVv/AtOiVED/DQgr9zSB5Y5dEEi5bZgqAs=,tag:pH3JU8NkHawosdwCnPpSVA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOOHdMWFRNNEdDRTd5U1kv
-            MmdJckxLcENIa2krazZQTmdJTHlJdW1uV0FVCnM4d0c3RUJVNlpCT1QxSkpSL29k
-            aEZjemRTL0xVMzdIa2Q2SFIzdTZVNEUKLS0tIG43T1YzN1cwQWZmOWZwK3RTbkZB
-            M3hFZE5pQ21CRnJpMlVoWlBTT3Y3b1UKjW4yjYl5Zv6S2Up0Wbv9D6rZsG/n9w7F
-            f8vsuiBFDYnZ994DfBngTvqmBH7cw3Q1pnwRATUqVy9NoLE4rvohFg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHTmMyR0V0WGhDZU0rNkdl
+            Nk9odFZoSkVMSFZkdnZBd3FsaUc3eUpyRFRvClZwa1VRVUhiY2xTOGp0QkhScjFU
+            bmVId1ZxTTg1UUxtcmN6SEUybCswWkEKLS0tIDRjWHE2MExLYllydTl2SkJLd1d6
+            WGFiNm9YTUppcnV3VUJUTDhNVVk4N1kK5Xxn76Q+G+cscUphAGBWQs6rQwqLMVno
+            eb65wchtM0Z1qBY316lzTq4Vu+RTnQTBGVJNKHcQq9MnYDii/wLE6Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:lh/6h2N+Yn+nNPLjv+AeYIOQxVCvSmEYbPpGnwZUm/aM0rFX+nf17uAjgC007aIzdGhhlOHNy3Xr9GVNKme6DPR/QbLiIq1tN4JOsKfXN2hHTBZBSOFNa2TVZSosJDpgS8gq7p12TYnbNXsYUqTkPPqtKJDDEMX2RtJ0QmLOWi8=,iv:svt1/XGrQdOdkRLJCnI/ZmyAoI1dgvR2FhBRUDKytHo=,tag:E6cMNe2w5XMW1PnvM6MayQ==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:Eqc9ZIJ7EN5b3VNkaq57pyodrsgz8UpmUq7xFyXVn2ZsamhrxRu357O3HHgndLVQ1VWv2V7pafx0yV0k2AKAuAN1t21VsLNBM7YKDKv1QGwJsZiK+AyReY4AQ0gmLXi0Nx71937KJ90jruBXtv5aBd31MTF69BRGEPlAwSymQtw=,iv:J72SaL3STB2+Fh/aT2tmZwR4LMf80iCyo1iyH9Hepi8=,tag:cgltnTAHBVxr0dxIaroOjw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
