--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:iesSOQ19,iv:zSrc9CE7vBp3gNwhBJQDcMc5tCj+5uKzKdijhZ9oyHo=,tag:Sfvipbqo6fEVw9OZpNT+bQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:M49fuNb6,iv:j6gQ3sXn/vzh7nptvf5dnFSroWxwQeUu3dUk3osf9B0=,tag:egN14OlxfrJu5wJW2ATpTw==,type:str]
+kind: ENC[AES256_GCM,data:OaPHvjMI,iv:q7ighftyPiw05Rb0ve9z5spUMvlg5ZBhq97nsDbh2v4=,tag:3Kwre+cd4Omf4tdVg33AGA==,type:str]
+ansible_user: ENC[AES256_GCM,data:ufaGLxgx,iv:qjg5n+vERKXkeGWUzaHpgDBrFWPxAwfQKMh/bWL0yY8=,tag:paiqdahYqfn2pzEKnhxHgw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRSk9wd3RtNUtlaDNBUDJz
-            K1pPQlZZeEFnczhSRGM1S2VRVHh0cHN5TTNjCkQ5cFB2N2RpdVlBSytZLytJRzVn
-            elJKOGJUbVB2aGQ0elljQUJIeGszMWMKLS0tIFA0bGJIbytIYXl4TWJLLzdvSk9P
-            U3JLMFlnTXNtTHV0cHpPRjFlMDErUmMKVguPRnHicWxLS+4K1oyFkm01oT0vkqLU
-            Plu4jokTqyCUeo6WZ4NcXZm1vyUyA79QYdIEnhqLQksGpJM3iKQQdA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLam9qNTNEWlI5Q2o3azhV
+            RmdsWlJ2NnhzdFlwalRFZERDeEtKbzYzYWljCjFLR1g4UzNtQnlhSUxPamdpSjd5
+            T0ZWUXE5Yk8rV3dnMXc2TUxKOHQ2VVEKLS0tIHRxelIvZ2thV3lCR1dacUNTdjBu
+            ZU9mQXE3MWFFWHlDWnE2eFVhcUxqNUEKF2bj00ttDXtO7/+W6iJMD+QLKlVZ77/M
+            QliFw3cUdpq0MLmzhZ8rfQMoeoPTXoCh4t36yZHDCmXO3pv3zs8mqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:lD34j3CuFnJM6wQgdYsxhhOtTAowIjzUP7+gRrYHtYJv1CZ8Rx8GpeX28FCqj+ddh4GWBztg4T/OIqQ4ds2QFqOR2SYZXcoH4hDsbfCHEJd8sXsDwyHIDZ3FgFQt2moODSLbiZMkN6Srli+b5/HAD2JFoGdFaPrtwB6vYi48H9o=,iv:kxq8zmXclgF5gQwwjZe/rQnDj6UY5lydQoE0nDiH4DA=,tag:mK7VKLsiPzZQlihcrE4e/Q==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:gJXnj8A0MLxQQKiYIic9wS/5E8b7tYRB71wXfvcmAs/KAIiI9F/EfRNhH6SgmImOQeoQMVtji7DKqAYOiICtQjswKThsIibsAU2tm4BySq2On4qWh6KATcoFpW+oBwV9QfIaVCmLmC/+dZpdUuu9e8T19bhIOEW/f7z3Es7K7n8=,iv:+f2h+7Vu95dmzQsczn+uKM/pnsTunVmmvIC6pf4jE4I=,tag:nUi1uDxMuZMj3HKuc6RY8w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
