--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mnHwWm7O,iv:vmQ0rRMDQwoBeR5Tm0CRjd9sK63Y+9Gf2f0HmY44ZiQ=,tag:DrZPocTU+N1WGqD2Ps22Aw==,type:str]
-ansible_user: ENC[AES256_GCM,data:SvNaV+cg,iv:iCmkhbB6rciSWyTwVl0QKpPb+ZNXlTqHML2TojWUoxY=,tag:KR3FdNoj+CqwF6xVDcH5QQ==,type:str]
+kind: ENC[AES256_GCM,data:ZDghHy//,iv:hyxxd58Fyr+BkaTUxYJK1bbwMuFIcL6svSzUg8m9pwE=,tag:LaEMycNj1MoMhwabUa7iyA==,type:str]
+ansible_user: ENC[AES256_GCM,data:zstGeekr,iv:kInBnDhr9otY+qfD8EBJMYn7SWVrjA1y+C+3W06/Kho=,tag:6PbLzy40RgZ5UpwkDWLWQQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvT0h6cWJkRHk1ODVIZTJp
-            aW45TlpxVlVDSzZiYVMzSktYMW5UR3gyTzJnCnZ0YS82MVh6NGhPR2RxZm54ZGlJ
-            R0YvK0tnZW40b3ZRQk5NSEQxQ0VjYmcKLS0tIFFHWlFqaDdrSHhwOXZlaEh6MkxG
-            RVZoZHB0N0hjbnIxOGRXYWc4OG8ydlUKvi0lYufOkxJM1B9I1/zV38+/rmhKhnDC
-            DOfrzHm9bcP7CdnimF9S3gw+cSVl9iF66mVkRCtTq2Mq4ULqaqxxGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNGppNHpWdTF0YkN4NGRk
+            NG9sMStoa2Z4SUd2emJwQk1JV0d2c3VvUmhRCm9JUGNxZjRPVy9GUWp0NHV0d0VO
+            VUVmUkJrdkhmS1puK3NUOWtLUlZONm8KLS0tIGRjLytNdWdWaXhqZG9odi9GUkFC
+            UkNJNlR5YU9kUTNwQ1Nic1dmQjRUK28K5GK2Cpx1/+fZ5WnRMOnHh7ZyEPArAoXU
+            p0scf1WtUhpOhuTdjOTDaM4bmAfHrlw+WDEXpqEFl4tMRhbvIXIfRQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:b76JfZI0SR1Fv/CiQ7U5qdsc2b1fGL5LZI9fUqhhYWCGR047LeHz9pNTpG0S1ejRltKjdO0zU2E6SrBvvODIDJgwSupvHJXaBJiPGf6wwTaHVBAWaA7eVD9DqYiP0A1PKO97ys87LGywiKN/vgGe90DIVw6BCSD0G+kgOVj4jFE=,iv:WGRGnSl0ZsXaNAI7XXM1pXXhvP+AAJUkWWf6oV9pD90=,tag:tjXlF2iqqXFme+zyxSV44A==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:IwKzosDBq4u4eKDYDd18k2FV1Sp6MdFc31/isyBOIkTDnHOLA0YBRLALgaPBfbzsZxDtCAeypM5J4I8+MbJpinZOlbGidj96UhSb7GgO83DILNUdojFQ504tAUk0nT/7rGa3Vc4T//zsfqKUCBYRGj0cvBxMdOoSOd+J8keg3y0=,iv:Tpdpj2EgiJP4apEXH17dVnSS5lzWCs6dYPKjV7pdag0=,tag:/xLrKWzzrcG/BEl0KcrdPg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
