--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:02WueDgN,iv:itj8Pulu4Tp6Wf/ceYEjYrfTXjdEyVR0TvcnOE/0ZPM=,tag:p4kaNenq/0mF45A6dwKRbQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:pUfOmRM8,iv:bMK1Txowx614uwHhN89PUX7hmzlgltgwd+miQDhHtKE=,tag:fBlhXv8w77LS/FemoHeCIQ==,type:str]
+kind: ENC[AES256_GCM,data:e7BcTfDz,iv:WPotl5fR8Hgm13ce9Ygobp9ih0jfNnGSbaYMvRdsCkc=,tag:apve5qug/SVSkJv8rtScOg==,type:str]
+ansible_user: ENC[AES256_GCM,data:oF7Krb0d,iv:Rq6eQycKhMlraScetVpzpvztgyxsauGmLmgMQgTXuMk=,tag:q+hJgYubMN/rkTw2MbltJQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNYVBMbEU4QUZwZVZhdnNT
-            bnRXUUNQdmdLeDVmTTJ3RFg1NVc4TVdETlRnCjkrdDZqNzc0TlJMNHl1Nys2RnRO
-            bkFoUWZKNXcweExWRy8rWnFUR3RLaEkKLS0tIFZlZlVsM3dJYmcrcG1yYUY3SFRm
-            MEg1cDUrbmh2L3M3RmpqQUNNR2tRcVUKknmN06hxpCRRavxHzOjbktbKeB91DGh6
-            VT4KwHWHyfB4PlUECSEvTeyooJE2I4uoelEpj9z7ed5DSoOQD+TOJg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1dy9jVUFaeldJbHE4dWlo
+            b0dPT1A3UldHRmZ5V0QzUU0wd3VTZnEybWlnCm54K3R4b2w1WlhZT0psUElRMVR3
+            SjdOY3cyZWZKQ3hkOFR6Y0haSEdISlkKLS0tIGYrZDZLRjZUVzJ6Lzd5VWJmMkd5
+            S0tuQnpTdXJQSmRDejBCU1Z3NlY2cVEKV+P9IMfZuAOri+araGoxm3lqZ3/gtNt7
+            MIiXiar9Jo9s5ZeD2iQXsUufu8+xCXa5DVyNU10hiIk6Z8AceHfHFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:tn4qQue26dy0n2oWhwUnMImHjEbVgsKstL2TiGPTtkzgsUyU+tf9jhOl/o+KmRUhWdn4eYPKRVd6Rj6J49YkGFjDlNytf/HRZkY48BO50DW/vxANBGt4A3NLWRMufC6+VNcsO9ep48NpfbpJVeIMLM94Y5MYqs5TMjeXh7TOU+c=,iv:Hr5ftl5ubaxSCe5FB19XSu1DWfG430UCoS1ww42JOUQ=,tag:qALp/tb30FBNxh2pVpKiMQ==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:z41SekVgeaSZ4L2+J5Izfbkurc7Q8v7l856tNIESgSRNZylU7i6igdAvCH1vY74auBa7fP7u0NNE4LlXeRCXrWc3ZxCIWsctdF9teEzkppeiwLGIHlnALCYnsTYkkJIGnhiAmtqm1j+CSakaerSTpYodcqiDSJLzbs2g8ndc8B0=,iv:UTdirRrjEs3MHpGqkWltFeRrAyCdrrzKElZiwEcVyhU=,tag:y8zlg129vp/mlV7gU2pi0Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
