--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:dmuOvr+Tkk45KdE=,iv:Evn02rM9wkFOLb69q/Zicn0VoY/ifd8HvRFeXLZntk4=,tag:4i8q2F3Eh9o9kIr6O7FzHQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:BX9roIFNkWN5n6ILf2JJlwypKKYI,iv:nzxW5IePD/Q2NuWo4T5joCnOiip06KvCHPTcTePJ3Eo=,tag:tTL9tkjL49RYimwT1HxKhQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:YGgFzgyouPSSq1k=,iv:wbPoOH+HTfXrf1cfBhwerlSrO5nU4xtJg0+qx/z5DIM=,tag:4DMU5QV7QpPgFwcIzo3Zbw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ddVcpZJBjKOC6/w+ed4ZnSeURQf0,iv:ORNUdKcAmUAe7i7IFeYCnTl5QVAg356nQvP35X7MZU8=,tag:NIMhjUS8BDjclEgwgZ8KBA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIK2ZDSHY0b1BFTVNzV1Ji
-            Yi9mNkdWL084ZkZ4N1A4VFBoa3AxYU9TV3djCktycWhzL044ay9wQTUwS1JnRDNk
-            cFlOLzB1QWN4YmlLV3hNaUFSUHIxSTgKLS0tIEwwZDZyaHlYMFFpeGs5NlVJNmpS
-            aU9QVFVONWhnd0c2by9NekgrdGYxN1UKCOYoGYTXYIeRanBFYt0KJvTfgbYE5bsR
-            hwqoLf77USD7pF72ptxh72SZ1QCedEAlgy7PzPqYGBkTXowAgAC0Hg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcXZ2UWRzRHU3a1MwMnNm
+            VWtjRTNSSmJjM3BpV3VrOUNkcVUwQjJ0bW1vCnVOc1FJSnlURzg3czJpMzdZcVEr
+            N3NHdnhvbFkvK0NORzVmcU82TWVOZ1kKLS0tICtTRGhxb1YwazV4T0ZpVVJzQzFL
+            bTZCQ2tVRi9ERHJyL3BVenhyYjVXSlEKSmyvEitUanXZ7A9++wFjL6dC6C1Dsu3n
+            gi5vSaqNEoXYc5hBhqEyxl7FfBN0G+Uo6WqccuBOOG/tSlfPN9npdg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:jYhj7tJ1Lu296Bs7dC2WyprJnNpKx+h8LzT3H7DZOAMS+0fWHLA3sSUoKEV03fIdt/wTtS949tg39xDnLq16+6D/Y6X/+Ru2jwyuHRgQvFDnjHSVv948eHelv1cZ+SlFPOTAeIS0Z6Ndk12djYyAtmzMYdbdwClppZxuBnnx6Fw=,iv:9IOpqFZop5jNP/T+Ms8sBfGLLR7BYUZtPz/fPc7J70Y=,tag:j6QiddUp/Frey80CiCLqxg==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:Drcf6F8hUizqLrSzw4di9EjIwDvsXCMz94Fw+RZ1Lqr0d5pkLS9jof0HyEw+CYRLYLZwi7iWgE5aFf52wGOIf9/wTeJIXXJ4TvArsUV0S66QYuBHhO+jX7SF4xT9ay1Xy9scBRRxJ/Bx0tYuI3O6m/NUQleYtqQyiWyuZrett1I=,iv:Z05Bkyu8k1l6qOiBN2/wH3lf0wIlVvjE7XBVcg71e2A=,tag:hruNIklcE4qaYzAW40uM3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
