--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:kK7aQBxP,iv:PJFoOyi0jeGJOPP5/totDaAr1vxWvVKxwQZd99jDfdo=,tag:JpJquNaMf4sqdnv9/mj8iA==,type:str]
-ansible_user: ENC[AES256_GCM,data:yrX/bsiI,iv:siXDsWXDAfrntoMOc2pwAwP1lPVrsqXx/1MR2rl3Qhs=,tag:8q9lx937GNTvBdhxtg91Mg==,type:str]
+kind: ENC[AES256_GCM,data:EQECPiWq,iv:juNcWolLmSTbQ35Hhx/z0xF5voSfFPqfECMxiOFhrqk=,tag:YQTaC8bmwsMQ2qKpL/kb7g==,type:str]
+ansible_user: ENC[AES256_GCM,data:lOGeqs7A,iv:XFZh5LVO9QCFRROphHMZPLGi+Ni/k6FUq8LLPpKKacE=,tag:6VepRDZOus8tPc1RXqMj7g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZU0hSdjBQMDN2cTJpQURS
-            RTdvcmp0QjJLaG1aeXNURjl4Wi9mTk9DZkMwClhwS3I4akZoWHdzcmF5YmYwK0Rq
-            YXh1NGo3SEdOVDBkYUxSMDEwcjZQa1kKLS0tIFc5M1FVaURpRmVkL3ZyaE03RmQr
-            dFhFMUQrT1VjWFprdnBtU1VtaHYyQUkKQZcsBbCPv3YUzf4gqeQbfXijg0lq53k2
-            Ejcqr+OBgS7XzsJhlzTpdbSWA7wHdUpKAULOJbUrchQ5ipXTbrhk/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQkdBZWNoZ3ZiNXhrdVo0
+            b3Ywb2RxWnp6M3llWlhWVGQwaXJrR0ZpQ3hZCmZTcmp6dkhnMlA3UlhqaExIVlZ5
+            S2E3NHB1cGhNZXZLdW5DZkExQldMSUkKLS0tIDJVcnFqeVRwTVBzVFFucFlvRmM4
+            em1kSDhZai8xUW1Xa1U1VFJtUnpnNWsKGM4Oia/HKSM/KUJ70ebt17mxuP+e8lTB
+            gi5AlFtrBuoHiez6mO7QKnzbirMjmlUXRipy67xP0FIAe8wnTvb1XQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T03:45:15Z"
-    mac: ENC[AES256_GCM,data:aV+Bn6v5VD+kjG6GZ808cjpwzDv7ozE9rEaAjgyDYw5YjSYQcAV2HcspJpClrbGUvVJO36gMYJEuQsKCKFpLKGRt4+bbme0oEAo79WYMAEcfRWDnVeBSiOg0bUxGzboo1OoxQefv7gQESviS6kAL7lBKK1jOEzkwdld5b0uqkyY=,iv:2k7ZlU7NFflFxl/1yRYXkUs9YCYjxv2dPTZGG0uNBdI=,tag:81ZORXcv2beUJ/ACLDYRiw==,type:str]
+    lastmodified: "2022-12-25T05:00:03Z"
+    mac: ENC[AES256_GCM,data:x8kakzhY7GKlw9RXe2cApzn8yMACUuPe6uCXC5JAlMgrhckK6uuE2Hhwg5VvYVyBkdW+Cl9nkJrtFh26wUngbdq6o3N5v5CmyEmwhletiLAO8putbOb/yNSiTuX6eXYEZrwmmfRhSWV4UDUfL16fy5Mu7y8Z4Bq8ZSqGqwN0zks=,iv:dv0dgOPGSYbRyO+zAMhvyxmVndIXehOCiu7CQ8xCpvA=,tag:Psyy9/8CgY16Toge9szo8g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
