--- a/tmpl/kubernetes/cloudflare-ddns-secret.sops.yaml
+++ b/tmpl/kubernetes/cloudflare-ddns-secret.sops.yaml
@@ -8,4 +8,4 @@ type: Opaque
 stringData:
   CLOUDFLARE_EMAIL: "${BOOTSTRAP_CLOUDFLARE_EMAIL}"
   CLOUDFLARE_APIKEY: "${BOOTSTRAP_CLOUDFLARE_APIKEY}"
-  CLOUDFLARE_RECORD_NAME: "ipv4.${BOOTSTRAP_CLOUDFLARE_DOMAIN}"
+  CLOUDFLARE_RECORD_NAME: "${BOOTSTRAP_CLOUDFLARE_DOMAIN}"
